# daiquiri

./: .coveragerc  .eslintrc.js  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  .travis.yml  AUTHORS  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py  webpack.config.js
.github/: dependabot.yml
.github/workflows/: pytest.yml
daiquiri/: __init__.py  __main__.py
daiquiri/archive/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/auth/: __init__.py  adapter.py  admin.py  apps.py  forms.py  handlers.py  models.py  permissions.py  serializers.py  settings.py  signals.py  tests.py  urls_accounts.py  urls_auth.py  utils.py  validators.py  views.py  viewsets.py
daiquiri/conesearch/: __init__.py  adapter.py  apps.py  permissions.py  renderers.py  settings.py  urls.py  utils.py  views.py  viewsets.py  vo.py
daiquiri/contact/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  paginations.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/core/: celery.py  constants.py  encoders.py  env.py  forms.py  generators.py  hashers.py  managers.py  middleware.py  paginations.py  permissions.py  renderers.py  responses.py  routers.py  serializers.py  settings.py  tasks.py  tests.py  utils.py  views.py  viewsets.py  vo.py
daiquiri/cutout/: __init__.py  adapter.py  apps.py  permissions.py  renderers.py  settings.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/dali/: filters.py  renderers.py  routers.py  serializers.py  utils.py  viewsets.py
daiquiri/datacite/: mixins.py  renderers.py  serializers.py  urls.py  views.py
daiquiri/datalink/: __init__.py  adapter.py  apps.py  constants.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py  viewsets.py  vo.py
daiquiri/files/: __init__.py  admin.py  apps.py  models.py  search.py  settings.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/jobs/: __init__.py  admin.py  apps.py  exceptions.py  filters.py  managers.py  models.py  renderers.py  routers.py  serializers.py  settings.py  urls.py  utils.py  validators.py  views.py  viewsets.py
daiquiri/meetings/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/metadata/: __init__.py  adapter.py  admin.py  apps.py  handlers.py  managers.py  mixins.py  models.py  renderers.py  serializers.py  settings.py  tests.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/oai/: __init__.py  adapter.py  apps.py  handlers.py  models.py  renderers.py  routers.py  settings.py  urls.py  utils.py  views.py
daiquiri/prop/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  viewsets.py
daiquiri/query/: __init__.py  adapter.py  admin.py  apps.py  exceptions.py  filters.py  handlers.py  managers.py  models.py  paginations.py  permissions.py  process.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py  viewsets.py
daiquiri/registry/: __init__.py  adapter.py  apps.py  serializers.py  settings.py  urls.py  views.py  vo.py
daiquiri/serve/: __init__.py  apps.py  serializers.py  settings.py  tasks.py  tests.py  urls.py  utils.py  views.py  viewsets.py
daiquiri/stats/: __init__.py  admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
daiquiri/tap/: __init__.py  apps.py  constants.py  handlers.py  middleware.py  models.py  renderers.py  routers.py  serializers.py  settings.py  urls.py  utils.py  views.py  viewsets.py  vo.py
daiquiri/uws/: filters.py  renderers.py  routers.py  serializers.py  tests.py  urls.py  utils.py  viewsets.py
daiquiri/wordpress/: __init__.py  apps.py  handlers.py  rules.py  settings.py  tasks.py  utils.py
daiquiri_auth/: __init__.py  adapter.py  admin.py  apps.py  forms.py  handlers.py  models.py  paginations.py  serializers.py  signals.py  tests.py  urls.py  urls_accounts.py  utils.py  views.py
daiquiri_auth/migrations/: 0005_view_permission_fix.py  0007_profile_is_confirmed.py  0008_profile_is_pending.py  0009_delete_detailkey.py
daiquiri_contact/: __init__.py  admin.py  apps.py  email_settings.py  forms.py  models.py  paginations.py  serializers.py  tests.py  urls.py  utils.py  views.py
daiquiri_core/: adapter.py  exceptions.py  permissions.py  serializers.py  utils.py  views.py
daiquiri_core/adapter/: __init__.py  mysql.py
daiquiri_core/templatetags/: core_tags.py  ng_tags.py
daiquiri_jobs/: admin.py  models.py  paginations.py  parsers.py  renderers.py  serializers.py  tests.py  urls.py  utils.py  views.py
daiquiri_jobs/migrations/: 0001_job_model.py  0002_execution_duration_default_0.py  0002_job_model_fix.py  0003_job_model_fix.py  0004_job_model_uuid.py  0004_phases_to_char.py  0006_owner_blank_true.py  0007_creation_time.py
daiquiri_metadata/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
daiquiri_metadata/migrations/: 0001_initial.py  0002_published_for.py  0003_groups.py  0004_function_query_string.py
daiquiri_query/: __init__.py  admin.py  apps.py  exceptions.py  forms.py  managers.py  models.py  paginations.py  serializers.py  tasks.py  urls.py  utils.py  views.py
daiquiri_query/backends/: __init__.py  base.py  direct.py
daiquiri_query/migrations/: 0002_meta.py  0004_table_name.py  0007_queryjob_metadata.py  0008_queryjob_pid.py  0009_remove_choices.py
daiquiri_serve/: serializers.py  views.py
daiquiri_uws/: exceptions.py  filters.py  renderers.py  routers.py  settings.py  tests.py  views.py
docs/: deployment.md  development.md  hierarchy.md  installation.md  prerequisites.md  testing.md
migrate_postgres/: docker-compose.yaml  migrate.sh
testing/: .env  default.local.py  requirements.txt  runcoverage.py  runtests.py  settings.py  travis.local.py  urls.py
(+1039 files in other folders)
